<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.humans.cleanwatercrowdsourcing.controller.HomeScreen">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />

    <EditText
        android:labelFor="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:inputType="textPersonName"
        android:text="@string/name"
        android:ems="10"
        android:id="@+id/editText" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button"
            android:layout_alignEnd="@+id/login_button"
            android:layout_marginTop="35dp"
            android:onClick = "goToRegisterScreen" />

        <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/login_button"
            android:layout_marginTop="235dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:onClick = "goToLoginScreen"/>

        <TextView
            android:text="@string/clean_water_crowdsourcing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="125dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
